split into multiple files

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -8,6 +8,9 @@ html(lang="en")
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js")
 		script(src="http://code.jquery.com/jquery-3.4.0.min.js" integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous")
 		script(src="/p5.pdf.js")
+		script(src="/stave.js")
+		script(src="/demonote.js")
+		script(src="/note.js")
 		script(src="/script.js")
 		link(rel="stylesheet" type="text/css" href="/style.css")
 	body
