--- a/templates/index.pug
+++ b/templates/index.pug
@@ -26,22 +26,23 @@ html(lang="en")
 					li#file-title.menu-title File
 				div#note.menu.viewing
 					form#note_mode
-						label Semibreve
-						input(type="radio" name="note" value="semibreve")
-						label Minim
-						input(type="radio" name="note" value="minim")
-						label Crotchet
-						input(type="radio" name="note" value="crotchet" checked)
-						label Quaver
-						input(type="radio" name="note" value="quaver")
-						label Semiquaver
-						input(type="radio" name="note" value="semiquaver")
-						label Demisemiquaver
-						input(type="radio" name="note" value="demisemiquaver")
-					label Mode: 
-					select#mode
-						option(value="create") Create
-						option(value="select") Select
+						input(type="radio" name="note" value="semibreve" id="semibreve")
+						label(for="semibreve") Semibreve
+						input(type="radio" name="note" value="minim" id="minim")
+						label(for="minim") Minim
+						input(type="radio" name="note" value="crotchet" id="crotchet" checked)
+						label(for="crotchet") Crotchet
+						input(type="radio" name="note" value="quaver" id="quaver")
+						label(for="quaver") Quaver
+						input(type="radio" name="note" value="semiquaver" id="semiquaver")
+						label(for="semiquaver") Semiquaver
+						input(type="radio" name="note" value="demisemiquaver" id="demisemiquaver")
+						label(for="demisemiquaver") Demisemiquaver
+					div#mode-placeholder
+							label(for="mode") Mode: 
+							select#mode
+								option(value="create") Create
+								option(value="select") Select
 				div#gracenote.menu
 					p Gracenote menu
 				div#text.menu
