added note dots

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -43,6 +43,7 @@ html(lang="en")
 							select#mode
 								option(value="create") Create
 								option(value="select") Select
+							button(id="dot-notes-button") Dot Selected
 				div#gracenote.menu
 					p Gracenote menu
 				div#text.menu
