--- a/templates/index.pug
+++ b/templates/index.pug
@@ -11,6 +11,7 @@ html(lang="en")
 		script(src="/stave.js")
 		script(src="/demonote.js")
 		script(src="/note.js")
+		script(src="/score.js")
 		script(src="/script.js")
 		script(src="/ui.js")
 		link(rel="stylesheet" type="text/css" href="/style.css")
