--- a/static/style.css
+++ b/static/style.css
@@ -77,6 +77,7 @@ input[type="radio"] {
 
 input[type="radio"]+label {
 	padding: .5em .5em;
+	cursor: pointer;
 }
 
 input[type="radio"]:checked+label {
