added gracenote class

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
 	head
 		title PipeScore
+		link(rel="shortcut icon" href="/images/favicon.ico")
 		meta(name="viewport" content="width=device-width, initial-scale=1")
 		meta(charset="UTF-8")
 		meta(http-equiv="X-UA-Compatible" content="ie=edge")
@@ -11,6 +12,7 @@ html(lang="en")
 		script(src="/stave.js")
 		script(src="/demonote.js")
 		script(src="/note.js")
+		script(src="/gracenote.js")
 		script(src="/score.js")
 		script(src="/script.js")
 		script(src="/ui.js")
