Added support to people with bad browsers

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -18,6 +18,13 @@ html(lang="en")
 		script(src="/ui.js")
 		link(rel="stylesheet" type="text/css" href="/style.css")
 	body
+		noscript Please enable JavaScript in your browser to use this app.
+		div#grid-unsupported
+			p Your browser doesn't support the latest spec. Consider downloading a modern browser (e.g. Chrome, Firefox).
+		div#too-small
+			img(src="https://cdn.shopify.com/s/files/1/1061/1924/products/Grinmacing_Face_Emoji_grande.png?v=1480481035", alt="Uh oh.", width="80px", height="80px")
+			p Your screen's resolution is too low for this app - you need a bigger monitor. PipeScore is not yet supported for mobile devices or tablets.
+			p We thank you for your patience.
 		header
 			div#title-and-mode
 				h1 PipeScore
