--- a/static/style.css
+++ b/static/style.css
@@ -5,6 +5,16 @@ body {
   margin: 0;
 }
 
+noscript {
+  display: block;
+  margin: .5rem auto;
+  background: white;
+  padding: 1rem;
+  width: 50%;
+  border-radius: .4rem;
+  text-align: center;
+}
+
 header {
   background: #26a5ff;
   padding: 0em;
@@ -101,5 +111,46 @@ input[type="radio"]:checked + label {
 
 #dot-notes-button {
   margin: .5em 0em;
+}
+
+#too-small {
+  display: none;
+}
+
+@media only screen and (max-width: 1050px) {
+  body * {
+    display: none;
+  }
+  #too-small {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  #too-small * {
+    display: block;
+    margin: 1rem auto;
+    padding: 0 .5rem;
+    text-align: center;
+  }
+}
+
+@supports (display: grid) {
+  #grid-unsupported {
+    display: none;
+  }
+}
+
+@supports not (display: grid) {
+  #grid-unsupported {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  #grid-unsupported * {
+    display: block;
+    margin: 1rem auto;
+    padding: 0 .5rem;
+    text-align: center;
+  }
 }
 /*# sourceMappingURL=style.css.map */
