--- a/static/style.scss
+++ b/static/style.scss
@@ -1,9 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 
+$minimum-width: 1050px;
+
+
+
 body {
     font-family: Montserrat;
     background: #e2ddff;
     margin: 0;
+}
+
+noscript {
+	display: block;
+	margin: .5rem auto;
+	background: white;
+	padding: 1rem;
+	width: 50%;
+	border-radius: .4rem;
+	text-align: center;
 }
 
 header {
@@ -91,4 +105,49 @@ input[type="radio"]:checked+label {
 
 #dot-notes-button {
 	margin: .5em 0em;
+}
+
+
+
+#too-small {
+	display: none;
+}
+
+@media only screen and (max-width: 1050px) {
+	body * {
+		display: none;
+	}
+	#too-small {
+		display: block;
+		width: 100%;
+		height: 100%;
+
+		* {
+			display: block;
+			margin: 1rem auto;
+			padding: 0 .5rem;
+			text-align: center;
+		}
+	}
+}
+
+@supports (display: grid) {
+	#grid-unsupported {
+		display: none;
+	}
+}
+
+@supports not (display: grid) {
+	#grid-unsupported {
+		display: block;
+		width: 100%;
+		height: 100%;
+
+		* {
+			display: block;
+			margin: 1rem auto;
+			padding: 0 .5rem;
+			text-align: center;
+		}
+	}
 }
