--- a/templates/index.pug
+++ b/templates/index.pug
@@ -66,7 +66,8 @@ html(lang="en")
 							option(value="create") Create
 							option(value="select") Select
 				div#gracenote.menu
-					form#gracenote_mode
+					section#gracenote-mode
+						h1.title Gracenote Mode
 						input(type="radio" name="gracenote-mode" value="normal" id="normal" checked)
 						label(for="normal") Add Gracenote
 						input(type="radio" name="gracenote-mode" value="place" id="place")
