Added mode changing to other menus

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -60,9 +60,9 @@ html(lang="en")
 						h1.title Apply to Selected
 						button(id="dot-notes-button") Dot
 						button(id="group-notes-button") Group
-					section#mode-section
+					section.mode-section
 						h1.title Mode
-						select#mode
+						select#mode-note
 							option(value="create") Create
 							option(value="select") Select
 				div#gracenote.menu
@@ -79,6 +79,11 @@ html(lang="en")
 							option(value="c-doubling") Doubling D
 							option(value="c-doubling") Doubling E
 							option(value="c-doubling") Doubling F
+					section.mode-section
+						h1.title Mode
+						select#mode-gracenote
+							option(value="create") Create
+							option(value="select") Select
 				div#text.menu
 					p Text menu
 				div#layout.menu
