--- a/static/style.scss
+++ b/static/style.scss
@@ -159,6 +159,26 @@ header {
 
 
 
+#error {
+	display: none;
+	background: red;
+	margin: 0;
+	position: fixed;
+	z-index: 1;
+	bottom: 0;
+	right: 0;
+	padding: .5rem;
+	border-radius: 1rem 0 0 0;
+	transition: display 1s;
+
+	p {
+		background: lighten(red,20%);
+		margin: 0;
+		padding: 1rem;
+		border-radius: .5rem 0 0 0;
+	}
+}
+
 #too-small {
 	display: none;
 }
