--- a/templates/index.pug
+++ b/templates/index.pug
@@ -25,6 +25,8 @@ html(lang="en")
 			img(src="https://cdn.shopify.com/s/files/1/1061/1924/products/Grinmacing_Face_Emoji_grande.png?v=1480481035", alt="Uh oh.", width="80px", height="80px")
 			p Your screen's resolution is too low for this app - you need a bigger monitor. PipeScore is not yet supported for mobile devices or tablets.
 			p We thank you for your patience.
+		div#error
+			p An unexplained error occurred. Try reloading the page.
 		header
 			nav
 				ul#menu-titles
