Added standard gracenote to demonote (top stave)

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -75,15 +75,15 @@ html(lang="en")
 						h1.title Gracenote Mode
 						input(type="radio" name="gracenote-mode" value="normal" id="normal" checked)
 						label(for="normal") Add Gracenote
-						input(type="radio" name="gracenote-mode" value="place" id="place")
-						label(for="place") Add Standard Embellishment 
+						input(type="radio" name="gracenote-mode" value="place" id="place-gracenote")
+						label(for="place-gracenote") Add Standard Embellishment 
 							select#gracenote-type
 								option(value="d-throw") Throw on D
-								option(value="c-doubling") Doubling B
+								option(value="b-doubling") Doubling B
 								option(value="c-doubling") Doubling C
-								option(value="c-doubling") Doubling D
-								option(value="c-doubling") Doubling E
-								option(value="c-doubling") Doubling F
+								option(value="d-doubling") Doubling D
+								option(value="e-doubling") Doubling E
+								option(value="f-doubling") Doubling F
 					section.mode-section
 						h1.title Mode
 						select#mode-gracenote
