--- a/templates/index.pug
+++ b/templates/index.pug
@@ -12,6 +12,7 @@ html(lang="en")
 		script(src="/demonote.js")
 		script(src="/note.js")
 		script(src="/gracenote.js")
+		script(src="/barline.js")
 		script(src="/score.js")
 		script(src="/script.js")
 		script(defer,src="/ui.js")
