--- a/templates/index.pug
+++ b/templates/index.pug
@@ -85,6 +85,9 @@ html(lang="en")
 								option(value="d-doubling") Doubling D
 								option(value="e-doubling") Doubling E
 								option(value="f-doubling") Doubling F
+					section#apply-to-selected-gracenotes
+						h1.title Apply to Selected
+						button(id="delete-gracenotes-button") Delete
 					section.mode-section
 						h1.title Mode
 						select#mode-gracenote
