--- a/static/style.css
+++ b/static/style.css
@@ -97,6 +97,18 @@ header nav .menu section {
   font-size: .9rem;
 }
 
+header nav .menu section.mode-section {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 2rem;
+          flex: 0 0 2rem;
+}
+
+header nav .menu section#apply-to-selected-gracenotes {
+  -webkit-box-flex: .4;
+      -ms-flex: .4;
+          flex: .4;
+}
+
 header nav .menu section h1 {
   margin: 0 0 1rem;
   padding: 0;
