Added deleteable barlines

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -100,6 +100,7 @@ html(lang="en")
 						h1.title Bars
 						button#add-bar-before + Bar Before
 						button#add-bar-after + Bar After
+						button#delete-bar Delete Barline
 					section.mode-section
 						h1.title Mode
 						select#mode-layout
