--- a/templates/index.pug
+++ b/templates/index.pug
@@ -102,6 +102,9 @@ html(lang="en")
 						label#font-size-label
 							span Font size:
 							input#font-size(type="number", value="16")
+						label#font-label
+							a(href="#",title="Font from fonts.google.com") Font: 
+							input#font-family(type="text", placeholder='URL from fonts.google.com', value="https://fonts.googleapis.com/css?family=Roboto&display=swap")
 					textarea#textarea(placeholder="Textbox text here...")
 					section.mode-section
 						h1.title Mode
