--- a/static/style.scss
+++ b/static/style.scss
@@ -123,7 +123,7 @@ header {
 					position: relative;
 					top: -.15rem;
 				}
-				label#font-size-label, label#font-label {
+				label#font-size-label {
 					margin-left: .4rem;
 				}
 				input[type="number"] {
@@ -156,6 +156,10 @@ header {
 					}
 				}
 				select {
+					font-family: inherit;
+					font-size: inherit;
+				}
+				textarea {
 					font-family: inherit;
 					font-size: inherit;
 				}
