Improved text slightly - added containing box

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -98,7 +98,8 @@ html(lang="en")
 				div#text.menu
 					section#apply-to-text
 						h1.title Apply to Selected
-						button#add-text Delete
+						button#add-text Add
+						button#delete-text Delete
 					section#font-properties
 						h1.title Font Properties
 						label#font-size-label
@@ -122,3 +123,4 @@ html(lang="en")
 				div#file.menu
 					h1.title File menu
 		div#page
+		style#programmable-styles
