--- a/templates/index.pug
+++ b/templates/index.pug
@@ -97,7 +97,7 @@ html(lang="en")
 							option(value="select") Select
 				div#text.menu
 					section#apply-to-text
-						h1.title Apply to Selected
+						h1.title Apply
 						button#add-text Add
 						button#delete-text Delete
 					section#font-properties
@@ -105,7 +105,7 @@ html(lang="en")
 						label#font-size-label
 							span Font size:
 							input#font-size(type="number", value="16")
-					textarea#textarea(placeholder="Textbox text here...")
+					textarea#textarea(placeholder="Select a textbox...",disabled)
 					section.mode-section
 						h1.title Mode
 						select#mode-text
