--- a/static/style.css
+++ b/static/style.css
@@ -96,6 +96,12 @@ header nav .menu textarea {
   resize: none;
   padding: .2rem;
   margin: .2rem;
+  font-family: inherit;
+  font-size: inherit;
+}
+
+header nav .menu textarea:disabled {
+  cursor: not-allowed;
 }
 
 header nav .menu section {
@@ -185,11 +191,6 @@ header nav .menu section select {
   font-size: inherit;
 }
 
-header nav .menu section textarea {
-  font-family: inherit;
-  font-size: inherit;
-}
-
 header nav .menu section a {
   color: inherit;
 }
@@ -228,27 +229,26 @@ header nav .menu section a {
   display: none;
 }
 
+/*
 @media only screen and (max-width: 1050px) {
-  body * {
-    display: none;
-  }
-  #too-small {
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
-  #too-small * {
-    display: block;
-    margin: 1rem auto;
-    padding: 0 .5rem;
-    text-align: center;
-  }
-}
+	body * {
+		display: none;
+	}
+	#too-small {
+		display: block;
+		width: 100%;
+		height: 100%;
 
-@supports (display: grid) {
-  #grid-unsupported {
-    display: none;
-  }
+		* {
+			display: block;
+			margin: 1rem auto;
+			padding: 0 .5rem;
+			text-align: center;
+		}
+	}
+}*/
+#grid-unsupported {
+  display: none;
 }
 
 @supports not (display: grid) {
